tests/bad/func/variadic_default.oc
/// fail: Cannot have variadic parameters and default parameters

def foo(a: i32, b: i32 = 5, ...): i32 => 0